Fix overflow of map on index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,9 +230,11 @@ body {
   }
   
 .sidebar {
-    
     text-align: center;
+    overflow: hidden;
 }
+
+
 iframe {
     width: 100%;
 }
